[gd_scene load_steps=2 format=3 uid="uid://dkp7y3r2mj8qa"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_pause"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_pause")

[node name="PausePanel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="PausePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="MenuContainer" type="VBoxContainer" parent="PausePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="PauseLabel" type="Label" parent="PausePanel/MenuContainer"]
layout_mode = 2
text = "PAUSED"
horizontal_alignment = 1

[node name="Space1" type="Control" parent="PausePanel/MenuContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ResumeButton" type="Button" parent="PausePanel/MenuContainer"]
layout_mode = 2
text = "Resume"

[node name="SaveButton" type="Button" parent="PausePanel/MenuContainer"]
layout_mode = 2
text = "Save Game"

[node name="MainMenuButton" type="Button" parent="PausePanel/MenuContainer"]
layout_mode = 2
text = "Main Menu"

[node name="ExitButton" type="Button" parent="PausePanel/MenuContainer"]
layout_mode = 2
text = "Exit Game"
